--- a/hw4-2021-main/index.html
+++ b/hw4-2021-main/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="css/html5reset.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Andika&display=swap" rel="stylesheet">
     <link rel="shortcut icon" type="image/png" href="images/pigeon-icon.png"/>
@@ -28,8 +30,8 @@
   * You can do it! (*•̀ᴗ•́*)و
   ******************************************** -->
   <body>
-    <h1>AU National Old Bird Hall of Fame Marathon Distance</h1>
     <main>
+    <h1>AU National Old Bird Hall of Fame Marathon Distance</h1>
       <table>
         <caption><a href = "https://pigeon-ndb.com/results/">Hall of Fame Marathon Records</a></caption>
       <thead>
